--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ prj.el
 nbproject/private
 generatedsrc
 lib/JFlex.jar
+lib/jflex-*
 lib/findbugs
 findbugs
 manifest.mf
@@ -35,3 +36,4 @@ glassfish
 webrev
 opengrok-web-nbproject/nbproject/private/
 opengrok-web-nbproject/nbproject/genfiles.properties
+run_my.bat
