--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.opensolaris.opengrok</groupId>
     <artifactId>opengrok</artifactId>
     <packaging>pom</packaging>
-    <version>0.10-SNAPSHOT</version>
+    <version>0.12-SNAPSHOT</version>
     <name>OpenGrok</name>
     <url>http://opengrok.github.com/OpenGrok/</url>
 
@@ -45,7 +45,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.8.1</version>
+                <version>4.11</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.bcel</groupId>
@@ -80,18 +80,18 @@
             <dependency>
                 <groupId>org.apache.ant</groupId>
                 <artifactId>ant</artifactId>
-                <version>1.8.1</version>
+                <version>1.9.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.derby</groupId>
                 <artifactId>derby</artifactId>
-                <version>10.6.1.0</version>
+                <version>10.10.1.1</version>
             </dependency>
 <!--
             <dependency>
                 <groupId>org.apache.derby</groupId>
                 <artifactId>derbyclient</artifactId>
-                <version>10.6.1.0</version>
+                <version>10.10.1.1</version>
             </dependency>
 -->
         </dependencies>
@@ -107,14 +107,17 @@
                     <target>${compileTarget}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
+                <version>3.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-			<forkMode>always</forkMode>
+                <configuration>			
+                        <forkCount>1</forkCount>
+                        <reuseForks>false</reuseForks>
 			<argLine>-XX:-UseSplitVerifier</argLine>
                 </configuration>
+                <version>2.16</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -130,7 +133,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.4.1-SNAPSHOT</version>
+                <version>2.5.3</version>
                 <configuration>
                     <xmlOutput>true</xmlOutput>
                     <includeFilterFile>tools/findbugs_filter.xml</includeFilterFile>
@@ -144,7 +147,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.7.1</version>
+                <version>3.0.1</version>
                 <reportSets>
                     <reportSet>
                         <reports>
@@ -169,6 +172,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
                 <reportSets>
                     <reportSet>
                         <id>non-aggregate</id>
@@ -187,11 +191,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.4.2</version>
+                <version>2.16</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
                     <aggregate>true</aggregate>
                 </configuration>
@@ -199,7 +204,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>2.11</version>
                 <configuration>
                     <configLocation>checkstyle/style.xml</configLocation>
                 </configuration>
@@ -209,17 +214,17 @@
 
     <repositories>
         <repository>
-            <id>maven2-repository.dev.java.net</id>
-            <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2/</url>
+            <id>maven.org</id>
+            <name>mave.org</name>
+            <url>http://repo.maven.apache.org/maven2/</url>
             <layout>default</layout>
         </repository>
     </repositories>
 
-    <pluginRepositories>
+    <pluginRepositories>        
         <pluginRepository>
-            <id>snapshots.repository.codehaus.org</id>
-            <url>http://snapshots.repository.codehaus.org</url>
+            <id>maven.org</id>
+            <url>http://repo.maven.apache.org/maven2/</url>
         </pluginRepository>
     </pluginRepositories>
 
