Seach the vb directory for a list of visual basic reserved words. Without this, the VB analyser will fail at runtime because the file is missing

--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -49,6 +49,13 @@ Copyright (c) 2010, 2011, Oracle and/or its affiliates. All rights reserved.
                 </includes>
             </resource>
             <resource>
+                <targetPath>org/opensolaris/opengrok/analysis/vb/</targetPath>
+                <directory>../src/org/opensolaris/opengrok/analysis/vb/</directory>
+                <includes>
+                  <include>*.dat</include>
+                </includes>
+            </resource>
+            <resource>
                 <targetPath>org/opensolaris/opengrok/index/</targetPath>
                 <directory>../src/org/opensolaris/opengrok/index/</directory>
                 <excludes><exclude>*.java</exclude></excludes>
