change tunable of remote repositories to allow generating history only from UI fixes #748

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -61,12 +61,12 @@ javac.classpath=\
     ${file.reference.ant.jar}:\
     ${file.reference.bcel-5.2.jar}:\
     ${file.reference.jrcs.jar}:\
-    ${file.reference.servlet-api.jar}:\
-    ${file.reference.swing-layout-0.9.jar}:\
-    ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
+    ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
-    ${file.reference.lucene-suggest.jar}
+    ${file.reference.lucene-suggest.jar}:\
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.swing-layout-0.9.jar}
  
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
