--- a/opengrok-web-nbproject/nbproject/project.properties
+++ b/opengrok-web-nbproject/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.lucene-core.jar=../lib/${lucene-core.jar}
 file.reference.lucene-analyzers-common.jar=../lib/${lucene-analyzers-common.jar}
 file.reference.lucene-queryparser.jar=../lib/${lucene-queryparser.jar}
 file.reference.lucene-suggest.jar=../lib/${lucene-suggest.jar}
+file.reference.json-simple-1.1.1.jar=../lib/${json-simple-1.1.1.jar}
 file.reference.ant.jar=${ant.library.dir}/ant.jar
 file.reference.bcel-5.2.jar=../lib/bcel-5.2.jar
 file.reference.jrcs.jar=../lib/jrcs.jar
@@ -60,7 +61,8 @@ javac.classpath=\
     ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
-    ${file.reference.lucene-suggest.jar}
+    ${file.reference.lucene-suggest.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.debug=true
