--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ jdk:
   - oraclejdk7
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq exuberant-ctags 
+ - sudo apt-get install -qq exuberant-ctags cvs git mercurial cssc bzr subversion
