do not run expensive JDBC query if FILEMOVES table is empty or tracking of renamed files is off this works around #774

--- a/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
+++ b/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
@@ -124,6 +124,22 @@ getFileHistory=\
       R.PATH = ? AND D.PATH = ? AND F.NAME = ? \
   ORDER BY CS.ID DESC
 
+getFileHistoryFolded=\
+  SELECT CS.REVISION, A.NAME, CS.TIME, CS.MESSAGE, CS.ID \
+  FROM \
+      OPENGROK.CHANGESETS CS \
+          JOIN OPENGROK.FILECHANGES FC ON CS.ID = FC.CHANGESET \
+          JOIN OPENGROK.FILES F ON FC.FILE = F.ID \
+          JOIN OPENGROK.DIRECTORIES D ON D.ID = F.DIRECTORY \
+          JOIN OPENGROK.AUTHORS A ON A.ID = CS.AUTHOR \
+          JOIN OPENGROK.REPOSITORIES R ON D.REPOSITORY = R.ID \
+  WHERE \
+      R.PATH = ? AND D.PATH = ? AND F.NAME = ? \
+  ORDER BY CS.ID DESC
+
+getFilemovesCount=\
+  SELECT COUNT(*) FROM OPENGROK.FILEMOVES
+
 getDirHistory=\
   SELECT CS.REVISION, A.NAME, CS.TIME, CS.MESSAGE, CS.ID \
   FROM \
