--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ webrev
 opengrok-web-nbproject/nbproject/private/
 opengrok-web-nbproject/nbproject/genfiles.properties
 run_my.bat
+*.xml~
+opengrok-web-nbproject/nbproject/build-impl.xml~
