take queries from the bug, fixes  #774

--- a/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
+++ b/src/org/opensolaris/opengrok/history/JDBCHistoryCache_queries.properties
@@ -113,28 +113,39 @@ hasCacheForDirectory=\
 getFileHistory=\
   SELECT CS.REVISION, A.NAME, CS.TIME, CS.MESSAGE, CS.ID \
   FROM \
-      OPENGROK.CHANGESETS CS \
-          JOIN (SELECT * FROM OPENGROK.FILECHANGES UNION \
-            SELECT * FROM OPENGROK.FILEMOVES) as FC ON CS.ID = FC.CHANGESET \
-          JOIN OPENGROK.FILES F ON FC.FILE = F.ID \
-          JOIN OPENGROK.DIRECTORIES D ON D.ID = F.DIRECTORY \
-          JOIN OPENGROK.AUTHORS A ON A.ID = CS.AUTHOR \
-          JOIN OPENGROK.REPOSITORIES R ON D.REPOSITORY = R.ID \
-  WHERE \
-      R.PATH = ? AND D.PATH = ? AND F.NAME = ? \
+     OPENGROK.CHANGESETS CS, \
+     (SELECT * FROM OPENGROK.FILECHANGES UNION SELECT * FROM OPENGROK.FILEMOVES) FC, \
+     OPENGROK.FILES F, \
+     OPENGROK.DIRECTORIES D, \
+     OPENGROK.AUTHORS A, \
+     OPENGROK.REPOSITORIES R \
+  WHERE R.PATH = ? \
+      AND D.path = ? \
+      AND F.name = ? \
+      AND D.REPOSITORY = R.ID \
+      AND CS.ID = FC.CHANGESET \
+      AND FC.FILE = F.ID \
+      AND D.ID = F.DIRECTORY \
+      AND A.ID = CS.AUTHOR \
   ORDER BY CS.ID DESC
 
 getFileHistoryFolded=\
   SELECT CS.REVISION, A.NAME, CS.TIME, CS.MESSAGE, CS.ID \
   FROM \
-      OPENGROK.CHANGESETS CS \
-          JOIN OPENGROK.FILECHANGES FC ON CS.ID = FC.CHANGESET \
-          JOIN OPENGROK.FILES F ON FC.FILE = F.ID \
-          JOIN OPENGROK.DIRECTORIES D ON D.ID = F.DIRECTORY \
-          JOIN OPENGROK.AUTHORS A ON A.ID = CS.AUTHOR \
-          JOIN OPENGROK.REPOSITORIES R ON D.REPOSITORY = R.ID \
-  WHERE \
-      R.PATH = ? AND D.PATH = ? AND F.NAME = ? \
+     OPENGROK.CHANGESETS CS, \
+     OPENGROK.FILECHANGES FC, \
+     OPENGROK.FILES F, \
+     OPENGROK.DIRECTORIES D, \
+     OPENGROK.AUTHORS A, \
+     OPENGROK.REPOSITORIES R \
+  WHERE R.PATH = ? \
+      AND D.path = ? \
+      AND F.name = ? \
+      AND D.REPOSITORY = R.ID \
+      AND CS.ID = FC.CHANGESET \
+      AND FC.FILE = F.ID \
+      AND D.ID = F.DIRECTORY \
+      AND A.ID = CS.AUTHOR \
   ORDER BY CS.ID DESC
 
 getFilemovesCount=\
