workaround older ant problem with jdk8

--- a/build.xml
+++ b/build.xml
@@ -789,7 +789,7 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
     <target name="jrcs" depends="-pre-pre-compile">
         <mkdir dir="${build.dir}/jrcs"/>
         <javac srcdir="jrcs/src/main/java" destdir="${build.dir}/jrcs"
-               nowarn="on" source="${javac.source}">
+               nowarn="on" source="${javac.source}" compiler="javac${javac.source}">
         <compilerarg value="-Xlint:deprecation"/> <!-- ,unchecked -->
         </javac>
         <jar destfile="${file.reference.jrcs.jar}">
