lucene 4.9 , jacoco, jflex 1.6.0

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ opengrok-web-nbproject/nbproject/genfiles.properties
 run_my.bat
 *.xml~
 opengrok-web-nbproject/nbproject/build-impl.xml~
+build.bat
+jacoco
+jacoco.exec
