--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,6 +11,7 @@ ant.library.dir=${ant.home}/lib
 application.homepage=http://opengrok.github.io/OpenGrok/
 application.title=OpenGrok
 application.vendor=
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.lex,**/*.html,**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -44,7 +45,7 @@ jnlp.mixed.code=default
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-lucene.version=4.8.1
+lucene.version=4.9.0
 lucene-core.jar=lucene-core-${lucene.version}.jar
 lucene-analyzers-common.jar=lucene-analyzers-common-${lucene.version}.jar
 lucene-queryparser.jar=lucene-queryparser-${lucene.version}.jar
@@ -98,10 +99,14 @@ jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
 main.class=org.opensolaris.opengrok.index.Indexer
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -109,6 +114,7 @@ run.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=-XX:-UseSplitVerifier -ea -enableassertions:org.opensolaris.opengrok...
+#-javaagent:lib/jacocoagent.jar=destfile=jacoco.exec 
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}:\
